@@ -13,7 +13,7 @@ class ANN {
 public:
     using sPtr=std::shared_ptr<ANN<T>>;
     enum WorkModes{TrainMode, WorkMode, UnknownMode};
-    ANN() : time_{0}, lockTrain_{false}, mode_{UnknownMode} {};
+    ANN() : lockTrain_{false}, mode_{UnknownMode} {};
     ANN(ANN*) {};
     virtual ~ANN() = default;
 
@@ -25,35 +25,39 @@ public:
     bool isTrainable() { return !lockTrain_; };
 
 
-    virtual T getOutput(size_t)=0;
-    virtual T setOutput(size_t, T)=0;
-    virtual T getInput(size_t)=0;
-    virtual T setInput(size_t, T)=0;
-    virtual T setError(size_t, T)=0;
-    virtual T appendError(size_t, T)=0;
+    virtual T getOutput(size_t ind)        final { return getOutputs()->raw(ind); };
+    virtual T setOutput(size_t ind, T val) final { return (getOutputErrors()->raw(ind)=val-getOutputs()->raw(ind)); };
+
+    virtual T getInput(size_t ind)         final { return getInputs()->raw(ind); };
+    virtual T setInput(size_t ind, T val)  final { return (getInputs()->raw(ind)=val); };
+
+    virtual T setError(size_t ind, T val)  final { return (getOutputErrors()->raw(ind)=val); };
+    virtual T appendError(size_t ind, T val)  final { return (getOutputErrors()->raw(ind)+=val); };
+
     virtual Tensor<T> getInputs()=0;
     virtual Tensor<T> getOutputs()=0;
     virtual Tensor<T> getInputErrors()=0;
     virtual Tensor<T> getOutputErrors()=0;
 
-    virtual size_t getNumInputs()=0;
-    virtual size_t getNumOutputs()=0;
-    virtual void forward()=0;
-    virtual void backward() {
+    virtual size_t getNumInputs()  final { return getInputs()->size(); };
+    virtual size_t getNumOutputs() final { return getOutputs()->size(); };
+    virtual void forward()=0; ///< прямое распространение сигналов по сети
+    /// обратное распространение сигналов по сети
+    virtual void backward() { 
 	if(mode_==UnknownMode)
 	    throw std::runtime_error("ANN::backward(): Не задан режим работы ИНС");
     };
-    virtual void batchBegin() {
+    /// начало батча - обнуление аккумулятора градиента
+    virtual void batchBegin() { 
 	if(mode_==UnknownMode)
 	    throw std::runtime_error("ANN::batchBegin(): Не задан режим работы ИНС");
     };
 
-    virtual void batchEnd() =0;
-    
-    virtual void setTutor(typename AbstractTutor<T>::uPtr) = 0;
+    virtual void batchEnd() =0; ///< конец батча - здесь происходит обучение
+    /// назначение Учителя
+    virtual void setTutor(typename AbstractTutor<T>::uPtr) {}; 
 
 private:
-    size_t time_;
     WorkModes mode_;
     bool lockTrain_;
 };
