@@ -34,24 +34,9 @@ public:
     Tensor<T>  getInputErrors()  override { return dX_; };
     Tensor<T>  getOutputErrors() override { return dX_; };
 
-    T getOutput(size_t index)          override { return  X_->raw(index); };
-    T setOutput(size_t index, T value) override { return (dX_->raw(index) = value - X_->raw(index)); };
-
-    T getInput(size_t index)          override { return  X_->raw(index); };
-    T setInput(size_t index, T value) override { return (X_->raw(index) = value); };
-
-    T setError(size_t index, T value)    override { return (dX_->raw(index) = value); };
-    T appendError(size_t index, T value) override { return (dX_->raw(index) = dX_->raw(index) + value); };
-
-
-    size_t getNumInputs()  override { return X_->size(); };
-    size_t getNumOutputs() override { return X_->size(); };
-
     void forward() override {
     };
     void batchEnd() override {
-    };
-    void setTutor(typename AbstractTutor<T>::uPtr) override {
     };
 private:
     // хранилище данных и псевдонимы для тензоров
