@@ -43,9 +43,6 @@ public:
     };
     
 
-    void setTutor(typename AbstractTutor<T>::uPtr tutor) override { 
-	throw std::runtime_error("ReLU::setTutor() не поддерживатеся");
-    };
 
 private:
     Tensor<T> X_, Y_;
