@@ -7,3 +7,10 @@
 * небольшие изменения тестов - исправлен охват параметров шаблона;
 
 * добавлена Doxygen - документация ко всем классам;
+
+* удалена неиспользуемая переменная time_ и класса ANN (за время отвечает Учитель с переменной sampleCount_);
+* дополнена документация;
+* индексные сеттеры и геттеры класса ANN теперь final, их реализации вынесены в базовый класс;
+* добавлен класс Reshape, меняющий форму тензора на другую, с таким же объемом;
+* исправлен метод setTutor в дочерних классах - он теперь не выбрасывает исключения, и кое-где удален вообще;
+* в Model добавлен вариативный метод setTutor позволяющий установить Учителя сразу для всех подсетей;
